k3s/traefik/traefik-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
  namespace: kubeflow
spec:
  type: LoadBalancer
  ports:
    - targetPort: web
      port: 80
  selector:
    app: traefik
