k3s/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kubeflow
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: kubeflow.k3s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port: 
              number: 8080
